src/objects/SMS_Message_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SMS Message Tracking</relationshipLabel>
        <relationshipName>SMS_Message_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FROM_Number__c</fullName>
        <label>FROM Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Case__c</fullName>
        <label>Matched Case</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Part__c</fullName>
        <defaultValue>99</defaultValue>
        <label>Message Part</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multi_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this message part of an identified multi part message?</inlineHelpText>
        <label>Multi Part?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Message</label>
        <referenceTo>SMS_Message_Tracking__c</referenceTo>
        <relationshipLabel>SMS Message Tracking</relationshipLabel>
        <relationshipName>RelatedMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>Store Parse of Message to check for Auto Response requirements</inlineHelpText>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TO_Number__c</fullName>
        <label>TO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Message_Parts_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Message Parts Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>NEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE TO PENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE TO MULTI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SMS Message Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_Message__c</columns>
        <columns>Type__c</columns>
        <columns>Multi_Part__c</columns>
        <columns>Direction__c</columns>
        <columns>TO_Number__c</columns>
        <columns>Message__c</columns>
        <columns>Case__c</columns>
        <columns>SID__c</columns>
        <columns>Status__c</columns>
        <columns>Message_Part__c</columns>
        <columns>Total_Message_Parts_Received__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Related_Message__c</columns>
        <columns>Type__c</columns>
        <columns>Direction__c</columns>
        <columns>TO_Number__c</columns>
        <columns>Message__c</columns>
        <columns>Case__c</columns>
        <columns>SID__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Message_Parts_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{00000}</displayFormat>
        <label>SMS Message Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Message Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>